# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import storesRouter from "./stores";
+import productsRouter from "./products";
+import publicRouter from "./public";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(storesRouter);
+router.use(productsRouter);
+router.use(publicRouter);
 
 export default router;
